dask tbb example

--- a/notebooks/TBB.ipynb
+++ b/notebooks/TBB.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -11,21 +11,64 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "37.41582250595093\n"
+      "import dask, time\r\n",
+      "import dask.array as da\r\n",
+      "\r\n",
+      "def do_dot():\r\n",
+      "    t0 = time.time()\r\n",
+      "    x = da.random.random((20000, 20000), chunks=(4000, 4000))\r\n",
+      "    x.dot(x.T).sum().compute()\r\n",
+      "    print('Time: ',time.time() - t0)\r\n",
+      "\r\n",
+      "for x in range(3):\r\n",
+      "    do_dot()\r\n"
      ]
     }
    ],
    "source": [
-    "import TBB\n",
-    "import dask, time\n",
-    "import dask.array as da\n",
-    "\n",
-    "t0 = time.time()\n",
-    "\n",
-    "x = da.random.random((10000, 10000), chunks=(4096, 4096))\n",
-    "x.dot(x.T).sum().compute()\n",
-    "\n",
-    "print(time.time() - t0)"
+    "! cat ../scripts/dask-ex.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time:  8.422322988510132\n",
+      "Time:  7.270439624786377\n",
+      "Time:  7.101450681686401\n"
+     ]
+    }
+   ],
+   "source": [
+    "! python ../scripts/dask-ex.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time:  4.892746448516846\n",
+      "Time:  4.952843189239502\n",
+      "Time:  4.759077310562134\n"
+     ]
+    }
+   ],
+   "source": [
+    "! python -m TBB ../scripts/dask-ex.py"
    ]
   }
  ],
