--- a/notebooks/Cython Example.ipynb
+++ b/notebooks/Cython Example.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook uses cython, which requires a C compiler. Linux and OSX have compilers, but windows systems may not"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
