--- a/notebooks/bytecodes.ipynb
+++ b/notebooks/bytecodes.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -25,7 +25,7 @@
     "    d = 1\n",
     "    return d+a+b+c\n",
     "def mulNum(a,b,c):\n",
-    "    return a+b+c+c"
+    "    return a*b*c*addNum(a,b,c)"
    ]
   },
   {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -65,14 +65,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  4           0 LOAD_FAST                0 (a)\n",
+      "  7           0 LOAD_FAST                0 (a)\n",
       "              3 LOAD_FAST                1 (b)\n",
-      "              6 BINARY_ADD\n",
+      "              6 BINARY_MULTIPLY\n",
       "              7 LOAD_FAST                2 (c)\n",
-      "             10 BINARY_ADD\n",
-      "             11 LOAD_FAST                2 (c)\n",
-      "             14 BINARY_ADD\n",
-      "             15 RETURN_VALUE\n"
+      "             10 BINARY_MULTIPLY\n",
+      "             11 LOAD_GLOBAL              0 (addNum)\n",
+      "             14 LOAD_FAST                0 (a)\n",
+      "             17 LOAD_FAST                1 (b)\n",
+      "             20 LOAD_FAST                2 (c)\n",
+      "             23 CALL_FUNCTION            3 (3 positional, 0 keyword pair)\n",
+      "             26 BINARY_MULTIPLY\n",
+      "             27 RETURN_VALUE\n"
      ]
     }
    ],
