--- a/notebooks/Cython Example.ipynb
+++ b/notebooks/Cython Example.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook uses cython, which requires a C compiler. Linux and OSX have compilers, but windows systems may not"
+    "This notebook uses cython, which requires a C compiler. Linux comes with a compiler. Install xcode for OSX and Visual Studio for windows."
    ]
   },
   {
@@ -66,7 +66,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10 loops, best of 3: 128 ms per loop\n"
+      "1 loop, best of 3: 142 ms per loop\n"
      ]
     }
    ],
@@ -566,9 +566,9 @@
       "python sum:  49500000\n",
       "cython sum1:  49500000\n",
       "python sum\n",
-      "10 loops, best of 3: 123 ms per loop\n",
+      "1 loop, best of 3: 134 ms per loop\n",
       "cython sum1\n",
-      "10 loops, best of 3: 51.7 ms per loop\n"
+      "10 loops, best of 3: 63.2 ms per loop\n"
      ]
     }
    ],
@@ -1069,11 +1069,11 @@
       "cython sum1:  49500000\n",
       "cython sum2:  49500000\n",
       "python sum\n",
-      "10 loops, best of 3: 122 ms per loop\n",
+      "1 loop, best of 3: 393 ms per loop\n",
       "cython sum1\n",
-      "10 loops, best of 3: 51.3 ms per loop\n",
+      "10 loops, best of 3: 56.7 ms per loop\n",
       "cython sum2\n",
-      "10 loops, best of 3: 32.2 ms per loop\n"
+      "10 loops, best of 3: 39.5 ms per loop\n"
      ]
     }
    ],
@@ -1576,15 +1576,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "metadata": {
     "collapsed": false
@@ -1599,14 +1590,14 @@
       "cython sum2:  49500000\n",
       "cython sum3:  49500000\n",
       "python sum\n",
-      "10 loops, best of 3: 123 ms per loop\n",
+      "1 loop, best of 3: 415 ms per loop\n",
       "cython sum1\n",
-      "10 loops, best of 3: 51.5 ms per loop\n",
+      "10 loops, best of 3: 58.8 ms per loop\n",
       "cython sum2\n",
-      "10 loops, best of 3: 31.9 ms per loop\n",
+      "10 loops, best of 3: 50.8 ms per loop\n",
       "cython sum3\n",
-      "The slowest run took 31.95 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
-      "10000000 loops, best of 3: 149 ns per loop\n"
+      "The slowest run took 31.76 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+      "10000000 loops, best of 3: 193 ns per loop\n"
      ]
     }
    ],
@@ -1623,6 +1614,73 @@
     "%timeit cython_sum2(a)\n",
     "print('cython sum3')\n",
     "%timeit cython_sum3(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from numba import jit\n",
+    "@jit\n",
+    "def numba_sum(a):\n",
+    "    s = 0\n",
+    "    for i in range(len(a)):\n",
+    "        for j in range(10000):\n",
+    "            s = s + a[i]\n",
+    "    return s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python sum:  49500000\n",
+      "cython sum1:  49500000\n",
+      "cython sum2:  49500000\n",
+      "cython sum3:  49500000\n",
+      "numba sum:  49500000\n",
+      "python sum\n",
+      "1 loop, best of 3: 165 ms per loop\n",
+      "cython sum1\n",
+      "10 loops, best of 3: 69 ms per loop\n",
+      "cython sum2\n",
+      "10 loops, best of 3: 36.5 ms per loop\n",
+      "cython sum3\n",
+      "The slowest run took 27.89 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+      "1000000 loops, best of 3: 180 ns per loop\n",
+      "numba sum\n",
+      "The slowest run took 20.09 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+      "1000000 loops, best of 3: 765 ns per loop\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('python sum: ',python_sum(a))\n",
+    "print('cython sum1: ',cython_sum1(a))\n",
+    "print('cython sum2: ',cython_sum2(a))\n",
+    "print('cython sum3: ',cython_sum3(a))\n",
+    "print('numba sum: ', numba_sum(a))\n",
+    "print('python sum')\n",
+    "%timeit python_sum(a)\n",
+    "print('cython sum1')\n",
+    "%timeit cython_sum1(a)\n",
+    "print('cython sum2')\n",
+    "%timeit cython_sum2(a)\n",
+    "print('cython sum3')\n",
+    "%timeit cython_sum3(a)\n",
+    "print('numba sum')\n",
+    "%timeit numba_sum(a)"
    ]
   }
  ],
