--- a/notebooks/TBB.ipynb
+++ b/notebooks/TBB.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -16,8 +16,8 @@
       "\r\n",
       "def do_dot():\r\n",
       "    t0 = time.time()\r\n",
-      "    x = da.random.random((20000, 20000), chunks=(4000, 4000))\r\n",
-      "    x.dot(x.T).sum().compute()\r\n",
+      "    x = da.random.random((12000, 12000), chunks=(4000, 4000))\r\n",
+      "    s = x.dot(x.T).sum().compute()\r\n",
       "    print('Time: ',time.time() - t0)\r\n",
       "\r\n",
       "for x in range(3):\r\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -40,9 +40,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time:  8.422322988510132\n",
-      "Time:  7.270439624786377\n",
-      "Time:  7.101450681686401\n"
+      "Time:  8.24970269203186\n",
+      "Time:  7.267415285110474\n",
+      "Time:  7.527649641036987\n"
      ]
     }
    ],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -61,9 +61,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time:  4.892746448516846\n",
-      "Time:  4.952843189239502\n",
-      "Time:  4.759077310562134\n"
+      "Time:  4.900471925735474\n",
+      "Time:  4.906714916229248\n",
+      "Time:  5.184909343719482\n"
      ]
     }
    ],
